--- a/microservicio-2/src/main/resources/application.properties
+++ b/microservicio-2/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
