--- a/microservicio-1/src/main/resources/application.properties
+++ b/microservicio-1/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=banco-pichincha
 spring.datasource.url=jdbc:mysql://localhost:3306/basedatos
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 spring.rabbitmq.host=localhost
