--- a/microservicio-2/src/main/resources/application.properties
+++ b/microservicio-2/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.application.name=banco-pichincha
 spring.datasource.url=jdbc:mysql://localhost:3306/basedatos
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+server.port=8081
